--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,47 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.wustrive</groupId>
-  <artifactId>aes-rsa-java</artifactId>
+  <groupId>cn.csfz</groupId>
+  <artifactId>aes-rsa</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <build>
+    <plugins>
+      <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-assembly-plugin</artifactId>
+      <version>2.5.5</version>
+      <configuration>
+        <archive>
+          <manifest>
+            <mainClass>cn.csfz.Main</mainClass>
+          </manifest>
+        </archive>
+        <descriptorRefs>
+          <descriptorRef>jar-with-dependencies</descriptorRef>
+        </descriptorRefs>
+      </configuration>
+      <executions>
+        <execution>
+
+          <id>make-assembly</id>
+          <phase>package</phase>
+          <goals>
+            <goal>single</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>7</source>
+          <target>7</target>
+        </configuration>
+      </plugin>
+
+    </plugins>
+  </build>
   <packaging>jar</packaging>
 
   <name>aes-rsa-java</name>
@@ -15,12 +53,6 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
     
     <dependency>
       <groupId>log4j</groupId>
@@ -39,5 +71,10 @@
 	    <artifactId>fastjson</artifactId>
 	    <version>1.2.7</version>
 	</dependency>
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>4.1.0</version>
+    </dependency>
   </dependencies>
 </project>
