--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>cn.csfz</groupId>
     <artifactId>aes-rsa</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.8</version>
     <build>
         <plugins>
             <!--      <plugin>-->
